tests/baselines/reference/inheritanceGrandParentPublicMemberCollisionWithPrivateMember.errors.txt
tests/cases/compiler/inheritanceGrandParentPublicMemberCollisionWithPrivateMember.ts(7,7): error TS2416: Class 'C' incorrectly extends base class 'B':
  Property 'myMethod' is private in type 'C' but not in type 'B'.


==== tests/cases/compiler/inheritanceGrandParentPublicMemberCollisionWithPrivateMember.ts (1 errors) ====
    class A {
        public myMethod() { }
    }
    
    class B extends A { }
    
    class C extends B {
          ~
!!! error TS2416: Class 'C' incorrectly extends base class 'B':
!!! error TS2416:   Property 'myMethod' is private in type 'C' but not in type 'B'.
        private myMethod() { }
    }
    